# QFP

./: CMakeLists.txt  LICENSE  Makefile  QtFunctionPlotter  QtFunctionPlotter.pro  README.md  moc_MainWindow.cpp  moc_PlotWidget.cpp  out.txt
src/: MainWindow.cpp  MainWindow.hpp  Parser.cpp  Parser.hpp  PlotWidget.cpp  PlotWidget.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
